Refactored code to fit Java 11 syntax
Spotless apply was runned and gradlew check which runs ITs and UT

Signed-off-by: Brian Flores <iflorbri@amazon.com>